// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationTitle component renders correctly 1`] = `
<Text
  style={
    Object {
      "alignItems": "baseline",
      "color": "#2F3945",
      "fontFamily": "OpenSans-SemiBold",
      "fontSize": 16,
    }
  }
  testID="notification_title"
>
  Trần Nam Anh 
  <Text
    style={
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 16,
      }
    }
    testID="notification_title.verb_text"
  >
    commented on your post
  </Text>
</Text>
`;

exports[`NotificationTitle component should show "NotificationTitle" with emoji 1`] = `
<Text
  style={
    Object {
      "alignItems": "baseline",
      "color": "#2F3945",
      "fontFamily": "OpenSans-SemiBold",
      "fontSize": 16,
    }
  }
  testID="notification_title"
>
  Trần Nam Anh 
  <Text
    style={
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 16,
      }
    }
    testID="notification_title.verb_text"
  >
    undefined 
    😄
     to your post
  </Text>
</Text>
`;
